kub secret 추가
